--- a/Modules/PatternMatching/Oniony.Sprouts.Core.PatternMatching.csproj
+++ b/Modules/PatternMatching/Oniony.Sprouts.Core.PatternMatching.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{626DC9FE-0367-460B-A88B-31336A9C55CD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Oniony.Sprouts.Core.PatternMatching</RootNamespace>
-    <AssemblyName>Oniony.Sprouts.Core.PatternMatching</AssemblyName>
+    <RootNamespace>Oniony.Sprouts.PatternMatching</RootNamespace>
+    <AssemblyName>Oniony.Sprouts.PatternMatching</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -48,6 +48,9 @@
     <Compile Include="PatternMatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\PatternMatchingTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
